[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.11.0", features = ["cookies"] }
base64ct = { version = "1.7.3", features = ["alloc"] }
bcrypt = "0.17.0"
deadpool-postgres = "0.14.1"
env-file-reader = "0.3.0"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
serde = "1.0.219"
tera = "1.20.0"
time = "0.3.41"
tokio-postgres = "0.7.13"
